<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/repeat_read_guide_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="14dp"
    android:paddingBottom="10dp"
    android:paddingLeft="14dp"
    android:paddingRight="14dp"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/desc"
        android:text="@string/repeat_read_step1"
        android:textSize="14sp"
        android:textColor="@color/_333333"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintRight_toRightOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/repeat_read_desc"
        android:textSize="11sp"
        android:textColor="@color/_7b7d82"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="10dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/desc"
        app:layout_constraintRight_toRightOf="@id/title"
        android:layout_marginTop="12dp"
        android:src="@mipmap/exit"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/icon"
        app:layout_constraintBottom_toBottomOf="@id/icon"
        app:layout_constraintRight_toLeftOf="@id/icon"
        app:layout_constraintLeft_toLeftOf="@id/title"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginRight="3dp"
        android:text="@string/exit"
        android:textSize="11sp"
        android:textColor="@color/_ff7e7e"
        app:layout_constrainedWidth="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>