<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calendar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/grade_select"
    app:layout_constraintBottom_toBottomOf="parent"
    app:cardCornerRadius="18dp"
    app:cardElevation="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/click_read_book"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/icon"
            app:layout_constraintTop_toTopOf="@id/icon"
            app:layout_constraintBottom_toBottomOf="@id/icon"
            android:layout_marginLeft="4dp"
            android:text="@string/click_read_book"
            android:textSize="16sp"
            android:textColor="@color/_4b4b4b"
            />

        <com.ruitech.bookstudy.widget.RoundAngleTextView
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/icon"
            app:layout_constraintBottom_toBottomOf="@id/icon"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/change"
            android:textSize="10sp"
            android:textColor="@color/_7b7d82"
            app:bgRadius="12dp"
            app:bgColor="@color/_ffffff"
            app:strokeWidth="1dp"
            app:strokeColor="@color/_f0f0f0"
            />

        <com.ruitech.bookstudy.widget.BookView
            android:id="@+id/img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintWidth_percent="0.24"
            app:layout_constraintDimensionRatio="103:127"
            app:mode="add_pending"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_click_read_book"
            android:textColor="@color/_4b4b4b"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintLeft_toRightOf="@id/img"
            app:layout_constraintRight_toRightOf="@id/change"
            app:layout_constraintTop_toTopOf="@id/img"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constrainedWidth="true"
            android:layout_marginLeft="16dp"
            />


        <com.ruitech.bookstudy.widget.RoundAngleTextView
            android:id="@+id/action_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/img"
            app:layout_constraintRight_toRightOf="@id/change"
            app:layout_constraintBottom_toBottomOf="@id/img"
            android:text="@string/click_read_start"
            android:textSize="12sp"
            android:textColor="@color/_ffffff"
            android:maxLines="1"
            android:ellipsize="end"
            app:bgColor="@color/_4989ff"
            app:bgRadius="16dp"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

