<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingBottom="10dp">

    <com.ruitech.bookstudy.homepage.HomePageBgView
        android:id="@+id/bg_view"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.ruitech.bookstudy.widget.RoundAngleTextView
        android:id="@+id/grade_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/calendar_card"
        app:bgRadius="16dp"
        app:bgColor="@color/_ffffff"
        android:drawableRight="@mipmap/drop_triangle"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="16dp"
        android:text="@string/grade_five"
        android:textColor="@color/_479df7"
        android:textSize="18sp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/calendar_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/grade_select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="18dp"
        app:cardElevation="4dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="16dp"
                android:src="@mipmap/calendar"
                app:layout_constraintLeft_toLeftOf="@id/tv1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv1"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/icon"
                app:layout_constraintTop_toTopOf="@id/icon"
                app:layout_constraintBottom_toBottomOf="@id/icon"
                android:layout_marginLeft="6dp"
                android:text="@string/study_calendar"
                android:textSize="18sp"
                android:textColor="@color/_4b4b4b"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv2"
                app:layout_constraintTop_toBottomOf="@id/icon"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_marginTop="22dp"
                android:text="@string/sun"
                android:textColor="@color/_c1c1c1"
                android:textSize="13sp"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <com.ruitech.bookstudy.widget.CircleTextView
                android:id="@+id/tv_date1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintLeft_toLeftOf="@id/tv1"
                app:layout_constraintRight_toRightOf="@id/tv1"
                app:layout_constraintTop_toBottomOf="@id/tv1"
                android:layout_marginTop="8dp"
                android:text="18"
                android:textSize="18sp"
                app:layout_constraintDimensionRatio="1"
                app:circleBgColor="@color/_4989ff"
                android:visibility="invisible"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tv1"
                app:layout_constraintRight_toLeftOf="@id/tv3"
                app:layout_constraintTop_toTopOf="@id/tv1"
                app:layout_constraintBottom_toBottomOf="@id/tv1"
                android:text="@string/mon"
                android:textColor="@color/_c1c1c1"
                android:textSize="13sp"
                />

            <com.ruitech.bookstudy.widget.CircleTextView
                android:id="@+id/tv_date2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintLeft_toLeftOf="@id/tv2"
                app:layout_constraintRight_toRightOf="@id/tv2"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                android:layout_marginTop="8dp"
                android:text="19"
                android:textSize="18sp"
                app:layout_constraintDimensionRatio="1"
                app:circleBgColor="@color/_4989ff"
                android:visibility="invisible"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tv2"
                app:layout_constraintRight_toLeftOf="@id/tv4"
                app:layout_constraintTop_toTopOf="@id/tv1"
                app:layout_constraintBottom_toBottomOf="@id/tv1"
                android:text="@string/tue"
                android:textColor="@color/_c1c1c1"
                android:textSize="13sp"
                />

            <com.ruitech.bookstudy.widget.CircleTextView
                android:id="@+id/tv_date3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintLeft_toLeftOf="@id/tv3"
                app:layout_constraintRight_toRightOf="@id/tv3"
                app:layout_constraintTop_toBottomOf="@id/tv3"
                android:layout_marginTop="8dp"
                android:text="19"
                android:textSize="18sp"
                app:layout_constraintDimensionRatio="1"
                app:circleBgColor="@color/_4989ff"
                android:visibility="invisible"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tv3"
                app:layout_constraintRight_toLeftOf="@id/tv5"
                app:layout_constraintTop_toTopOf="@id/tv1"
                app:layout_constraintBottom_toBottomOf="@id/tv1"
                android:text="@string/wed"
                android:textColor="@color/_c1c1c1"
                android:textSize="13sp"
                />

            <com.ruitech.bookstudy.widget.CircleTextView
                android:id="@+id/tv_date4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintLeft_toLeftOf="@id/tv4"
                app:layout_constraintRight_toRightOf="@id/tv4"
                app:layout_constraintTop_toBottomOf="@id/tv4"
                android:layout_marginTop="8dp"
                android:text="19"
                android:textSize="18sp"
                app:layout_constraintDimensionRatio="1"
                app:circleBgColor="@color/_4989ff"
                android:visibility="invisible"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tv4"
                app:layout_constraintRight_toLeftOf="@id/tv6"
                app:layout_constraintTop_toTopOf="@id/tv1"
                app:layout_constraintBottom_toBottomOf="@id/tv1"
                android:text="@string/thu"
                android:textColor="@color/_c1c1c1"
                android:textSize="13sp"
                />

            <com.ruitech.bookstudy.widget.CircleTextView
                android:id="@+id/tv_date5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintLeft_toLeftOf="@id/tv5"
                app:layout_constraintRight_toRightOf="@id/tv5"
                app:layout_constraintTop_toBottomOf="@id/tv5"
                android:layout_marginTop="8dp"
                android:text="19"
                android:textSize="18sp"
                app:layout_constraintDimensionRatio="1"
                app:circleBgColor="@color/_4989ff"
                android:visibility="invisible"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tv5"
                app:layout_constraintRight_toLeftOf="@id/tv7"
                app:layout_constraintTop_toTopOf="@id/tv1"
                app:layout_constraintBottom_toBottomOf="@id/tv1"
                android:text="@string/fri"
                android:textColor="@color/_c1c1c1"
                android:textSize="13sp"
                />

            <com.ruitech.bookstudy.widget.CircleTextView
                android:id="@+id/tv_date6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintLeft_toLeftOf="@id/tv6"
                app:layout_constraintRight_toRightOf="@id/tv6"
                app:layout_constraintTop_toBottomOf="@id/tv6"
                android:layout_marginTop="8dp"
                android:text="19"
                android:textSize="18sp"
                app:layout_constraintDimensionRatio="1"
                app:circleBgColor="@color/_4989ff"
                android:visibility="invisible"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tv6"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv1"
                app:layout_constraintBottom_toBottomOf="@id/tv1"
                android:text="@string/sat"
                android:textColor="@color/_c1c1c1"
                android:textSize="13sp"
                />

            <com.ruitech.bookstudy.widget.CircleTextView
                android:id="@+id/tv_date7"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintLeft_toLeftOf="@id/tv7"
                app:layout_constraintRight_toRightOf="@id/tv7"
                app:layout_constraintTop_toBottomOf="@id/tv7"
                android:layout_marginTop="8dp"
                android:text="19"
                android:textSize="18sp"
                app:layout_constraintDimensionRatio="1"
                app:circleBgColor="@color/_4989ff"
                android:visibility="invisible"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/anchor"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="@id/calendar_card"
        app:layout_constraintBottom_toBottomOf="@id/calendar_card"
        app:layout_constraintVertical_bias="0.22"
        android:visibility="invisible"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/calendar_head_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="4dp"
        app:layout_constraintRight_toRightOf="@id/calendar_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/calendar_card"
        android:src="@mipmap/ip_calendar_head"
        app:layout_constraintDimensionRatio="220:152"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintVertical_bias="1"
        android:layout_marginRight="20dp"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/calendar_hands_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="4dp"
        android:src="@mipmap/ip_calendar_hands"
        app:layout_constraintLeft_toLeftOf="@id/calendar_head_img"
        app:layout_constraintRight_toRightOf="@id/calendar_head_img"
        app:layout_constraintTop_toBottomOf="@id/calendar_head_img"
        app:layout_constraintBottom_toBottomOf="@id/calendar_head_img"
        app:layout_constraintDimensionRatio="220:44"
        />
</androidx.constraintlayout.widget.ConstraintLayout>