<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <com.ruitech.bookstudy.widget.RoundAngleTextView
        android:id="@+id/page_num_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/_4989ff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:bgRadius="12dp"
        app:bgColor="@color/_90baff"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="16dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintDimensionRatio="134:97"
        app:layout_constraintVertical_bias="1"
        android:layout_marginRight="18dp"
        android:src="@mipmap/ip_guide"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/icon"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/page_num_tv"
        app:layout_constraintBottom_toTopOf="@id/desc"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constrainedWidth="true"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="8dp"
        android:text="@string/guide1_1"
        android:textColor="@color/_ffffff"
        android:textSize="16sp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/icon"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        app:layout_constrainedWidth="true"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/guide1_2"
        android:textColor="@color/_ffffff"
        android:textSize="12sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintVertical_bias="1"/>

    <com.ruitech.bookstudy.widget.RoundAngleTextView
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:bgRadius="22dp"
        app:bgColor="@color/_6a36cf"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/_ffffff"
        android:textSize="14sp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>